--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
       </address>
 
       <!--Sustituir por los datos del alumno-->
-      <p><a href="http://twitter.com/eescamilla" target="blank"><img src="img/twitter-icon.jpg" width=25></a>
+      <p><a href="http://twitter.com/edgardescamilla" target="blank"><img src="img/twitter-icon.jpg" width=25></a>
       <!--Sustituir por los datos del alumno-->
       <a href="http://github.com/eescamillar" target="blank"><img src="img/github-icon.png" width=25></a>
       <!--Sustituir por los datos del alumno-->
-      <a href="https://es.linkedin.com/in/usuario" target="blank"><img src="img/linkedin-icon.png" width=25></a>
+      <a href="https://es.linkedin.com/in/mti-edgardo-escamilla-resendiz-90b75264" target="blank"><img src="img/linkedin-icon.png" width=25></a>
     </div>
 
     <div class="container">
